--- a/app/views/public/homepage.html.erb
+++ b/app/views/public/homepage.html.erb
@@ -2,8 +2,8 @@
 
 <nav>
     <ul style="display: flex; gap: 1rem; list-style: none">
-        <li><%= link_to "All Snippets", snippets_path %></li>
-        <li><%= link_to "Create new snippet", new_snippet_path %></li>
+        <li><%= link_to "All Snippets", code_snippets_path %></li>
+        <li><%= link_to "Create new snippet", new_code_snippet_path %></li>
         <li><%= link_to "Log in", new_user_session_path %></li>
         <li><%= link_to "Register", new_user_registration_path %></li>
     </ul>
