--- a/app/assets/stylesheets/snippet.css
+++ b/app/assets/stylesheets/snippet.css
@@ -39,7 +39,7 @@
 .snippet-card {
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 1rem;
 }
 
@@ -51,7 +51,7 @@
 }
 
 .snippet-card:hover {
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 /* Form  */
@@ -94,7 +94,6 @@
   border: none;
   border-radius: 5px;
   background-color: #fff;
-  border: solid 1px #ccc;
   transition: all 0.3s ease;
 }
 
@@ -112,7 +111,7 @@
   font-size: 1rem;
   border: none;
   border-radius: 5px;
-  background-color: #ffffff;
+  background-color: #fff;
   font-family: inherit;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
@@ -142,19 +141,25 @@
   text-decoration: none;
   text-transform: uppercase;
   transition: all 0.3s ease-in;
-  box-shadow: rgba(0, 0, 0, 0.2) 0 3px 1px -2px, rgba(0, 0, 0, 0.14) 0 2px 2px 0,
+  box-shadow:
+    rgba(0, 0, 0, 0.2) 0 3px 1px -2px,
+    rgba(0, 0, 0, 0.14) 0 2px 2px 0,
     rgba(0, 0, 0, 0.12) 0 1px 5px 0;
 }
 
 .snippet-form input[type='submit']:hover,
 .snippet-form input[type='submit']:focus {
-  box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px -1px, rgba(0, 0, 0, 0.14) 0 4px 5px 0,
+  box-shadow:
+    rgba(0, 0, 0, 0.2) 0 2px 4px -1px,
+    rgba(0, 0, 0, 0.14) 0 4px 5px 0,
     rgba(0, 0, 0, 0.12) 0 1px 10px 0;
   transform: translateY(-2px);
 }
 
 .snippet-form input[type='submit']:active {
-  box-shadow: rgba(0, 0, 0, 0.2) 0 5px 5px -3px,
-    rgba(0, 0, 0, 0.14) 0 8px 10px 1px, rgba(0, 0, 0, 0.12) 0 3px 14px 2px;
+  box-shadow:
+    rgba(0, 0, 0, 0.2) 0 5px 5px -3px,
+    rgba(0, 0, 0, 0.14) 0 8px 10px 1px,
+    rgba(0, 0, 0, 0.12) 0 3px 14px 2px;
   background: #a46bf5;
 }
