--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -7,4 +7,14 @@
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 18px;
+  background-color: rgb(241, 243, 250);
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+button {
+  cursor: pointer;
 }
