--- a/app/views/code_snippets/_card.erb
+++ b/app/views/code_snippets/_card.erb
@@ -1,5 +1,5 @@
 <div class="snippet-card">
-    <h3><%= link_to snippet.title, code_snippet_path(snippet) %></h3>
+    <h3><%= link_to snippet.title, code_snippet_path(snippet), class: "link" %></h3>
 
     <h4>by <%= snippet.user.name %></h4>
     <pre class="snippet-code"><code><%= snippet.code %></code></pre>
