--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
   background-color: rgb(241, 243, 250);
 }
@@ -17,4 +17,103 @@ a {
 
 button {
   cursor: pointer;
+}
+
+/* Common Styles  */
+
+/* Buttons  */
+
+.btn {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.5;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 0.25rem;
+  border: solid 1px;
+  transition: all 0.2s ease-in-out;
+}
+
+.btn-primary {
+  background-color: blueviolet;
+  border-color: blueviolet;
+  color: #fff;
+}
+
+.btn-primary:hover {
+  background-color: darkblue;
+}
+
+.btn-outline {
+  background-color: transparent;
+  border-color: blueviolet;
+  color: blueviolet;
+}
+
+.btn-outline:hover {
+  background-color: blueviolet;
+  color: #fff;
+}
+
+/* Alert messages  */
+
+.alert {
+  padding: 0.25rem;
+  font-size: 0.8rem;
+  font-weight: 400;
+  text-align: center;
+  color: #fff;
+}
+
+.alert-success {
+  background-color: #a5d6a7;
+  border-color: #66bb6a;
+  color: #1b5e20;
+}
+
+.alert-info {
+  background-color: #ffe082;
+  border-color: #ffb74d;
+  color: #e65100;
+}
+
+.alert-danger {
+  background-color: #ef9a9a;
+  border-color: #e57373;
+  color: #b71c1c;
+}
+
+/* Links */
+
+.link {
+  color: blueviolet;
+  text-decoration: none;
+  position: relative;
+  transition: color 0.2s ease-out;
+}
+
+.link::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: blueviolet;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.2s ease-out;
+}
+
+.link:hover {
+  color: darkblue;
+}
+
+.link:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
 }
