--- a/app/assets/stylesheets/snippet.css
+++ b/app/assets/stylesheets/snippet.css
@@ -45,9 +45,12 @@
 
 .snippet-card pre {
   display: block;
-  height: 200px;
-  overflow: hidden;
   margin: 0.5rem 0;
+}
+
+.snippet-grid .snippet-card pre {
+  height: 200px;
+  overflow-y: auto;
 }
 
 .snippet-card:hover {
@@ -94,6 +97,7 @@
   border: none;
   border-radius: 5px;
   background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
 }
 
@@ -105,7 +109,7 @@
 
 .snippet-form textarea {
   width: 100%;
-  height: 200px;
+  height: 100px;
   resize: vertical;
   padding: 1rem;
   font-size: 1rem;
@@ -141,25 +145,19 @@
   text-decoration: none;
   text-transform: uppercase;
   transition: all 0.3s ease-in;
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0 3px 1px -2px,
-    rgba(0, 0, 0, 0.14) 0 2px 2px 0,
+  box-shadow: rgba(0, 0, 0, 0.2) 0 3px 1px -2px, rgba(0, 0, 0, 0.14) 0 2px 2px 0,
     rgba(0, 0, 0, 0.12) 0 1px 5px 0;
 }
 
 .snippet-form input[type='submit']:hover,
 .snippet-form input[type='submit']:focus {
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0 2px 4px -1px,
-    rgba(0, 0, 0, 0.14) 0 4px 5px 0,
+  box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px -1px, rgba(0, 0, 0, 0.14) 0 4px 5px 0,
     rgba(0, 0, 0, 0.12) 0 1px 10px 0;
   transform: translateY(-2px);
 }
 
 .snippet-form input[type='submit']:active {
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0 5px 5px -3px,
-    rgba(0, 0, 0, 0.14) 0 8px 10px 1px,
-    rgba(0, 0, 0, 0.12) 0 3px 14px 2px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 5px 5px -3px,
+    rgba(0, 0, 0, 0.14) 0 8px 10px 1px, rgba(0, 0, 0, 0.12) 0 3px 14px 2px;
   background: #a46bf5;
 }
