Implement comment#create

--- a/app/views/code_snippets/show.html.erb
+++ b/app/views/code_snippets/show.html.erb
@@ -15,12 +15,12 @@
     <pre class="snippet-code"><code><%= @code_snippet.code %></code></pre>
 
     <div>
-      <%= link_to "Rate this snippet", new_code_snippet_rating_path(@code_snippet) %>
-      <%= link_to "Add a comment", new_code_snippet_comment_path(@code_snippet) %>
+      <%= link_to "Rate this snippet", new_code_snippet_rating_path(@code_snippet), class: "btn btn-outline" %>
       <% if current_user == @code_snippet.user %>
         <%= link_to "Edit this snippet", edit_code_snippet_path(@code_snippet) %>
       <% end %>
     </div>
+  <%= render 'comment_form', snippet: @code_snippet, comment: Comment.new %>
   </div>
 
   <div>
@@ -36,4 +36,5 @@
       <p>No one has commented yet!</p>
     <% end %>
   </div>
+
 </section>
