--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -4,6 +4,7 @@
   align-items: center;
   background-color: aliceblue;
   padding: 0.25rem 1rem;
+  box-shadow: 0 1px 3px #ccc5;
 }
 
 .main-header nav {
