--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<%= render 'public/header' %>
 <h2>Sign up</h2>
 <div class="auth-form-container">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
