--- a/app/views/comments/_item.html.erb
+++ b/app/views/comments/_item.html.erb
@@ -1,24 +1,31 @@
 <div class="comment-item">
-    <div class="comment-header">
-        <div class="comment-meta">
-            <div class="comment-author-icon">
-                <% if comment.user.avatar_url %>
-                    <img src="<%= comment.user.avatar_url%>">
-                <% else %>
-                    <span><%= comment.user.name[0].upcase %></span>
+    <div class="comment-voting-box">
+        <button type="button">+</button>
+        <span>5</span>
+        <button type="button">-</button>
+    </div>
+    <div class="comment-info-box">
+        <div class="comment-header">
+            <div class="comment-meta">
+                <div class="comment-author-icon">
+                    <% if comment.user.avatar_url %>
+                        <img src="<%= comment.user.avatar_url%>">
+                    <% else %>
+                        <span><%= comment.user.name[0].upcase %></span>
+                    <% end %>
+                </div>
+                <p class="comment-author-name"><%= comment.user.name %></p>
+                <p class="comment-time"><%= comment.created_at %></p>
+            </div>
+            <div class="comment-actions">
+                <% if current_user == comment.user %>
+                    <%= button_to "❌ Delete", code_snippet_comment_path(comment.code_snippet, comment), method: :delete, class: "del-btn" %>
                 <% end %>
             </div>
-            <p class="comment-author-name"><%= comment.user.name %></p>
-            <p class="comment-time"><%= comment.created_at %></p>
         </div>
-        <div class="comment-actions">
-            <% if current_user == comment.user %>
-                <%= button_to "❌ Delete", code_snippet_comment_path(comment.code_snippet, comment), method: :delete, class: "del-btn" %>
-            <% end %>
-        </div>
-    </div>
 
-    <div class="comment-body">
-        <p><%= comment.content %></p>
+        <div class="comment-body">
+            <p><%= comment.content %></p>
+        </div>
     </div>
 </div>
