--- a/app/views/code_snippets/_card.erb
+++ b/app/views/code_snippets/_card.erb
@@ -1,4 +1,4 @@
-<div class="snippet-card">
+<div class="snippet-item">
     <h3><%= link_to snippet.title, code_snippet_path(snippet), class: "link" %></h3>
 
     <h4>by <%= snippet.user.name %></h4>
