--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <%= javascript_include_tag 'prism'%>
+    <script src="https://kit.fontawesome.com/9d6e6aaa13.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
