Redesign index page

--- a/app/views/code_snippets/index.html.erb
+++ b/app/views/code_snippets/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'public/header' %>
 <section class="page-container">
-    <h2>All Snippets</h2>
+    <h2 class="page__heading">All Snippets</h2>
     <% if @code_snippets.empty? %>
         <p>No one has uploaded any code yet!</p>
     <% else %>
