--- a/app/assets/stylesheets/snippet.css
+++ b/app/assets/stylesheets/snippet.css
@@ -1,22 +1,77 @@
 /* *** Snippet Index Page  */
 
 .snippet-grid {
-  width: 70%;
+  width: 90%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr;
-  gap: 0.5rem;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
 }
 
 .snippet-item {
+  display: block;
   background-color: #fff;
   padding: 1rem;
   border-radius: 4px;
+  max-height: 300px;
+  display: grid;
+  gap: 0.5rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in;
+}
+
+.snippet-item:hover {
+  box-shadow: 10px 18px 25px rgba(140, 98, 143, 0.29);
+}
+
+.snippet-item__header {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.snippet-item__menu-btn {
+  background: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  padding: 1px;
+  border-radius: 6px;
+  font-size: 1.6rem;
+  margin-left: auto;
+  transition: all 0.2s ease;
+}
+
+.snippet-item__menu-btn:hover {
+  background: #ccc;
+}
+
+.snippet-item__counters {
+  display: flex;
+  padding-top: 0.25rem;
+  gap: 1rem;
+  color: #000;
+  font-weight: 500;
+}
+
+.link-arrow {
+  color: #6200ee;
+  display: none;
+}
+
+.snippet-item:hover .link-arrow {
+  display: block;
 }
 
 .snippet-item pre {
   width: 100%;
+  height: 100%;
   overflow: auto;
+  scrollbar-width: none;
+}
+
+.snippet-item pre::-webkit-scrollbar {
+  display: none;
 }
 
 /* *** Snippet Show Page  */
