Fix comment author icons

--- a/app/views/comments/_item.html.erb
+++ b/app/views/comments/_item.html.erb
@@ -7,7 +7,7 @@
     <div class="comment-info-box">
         <div class="comment-header">
             <div class="comment-meta">
-                <div class="comment-author-icon">
+                <div class="author-icon">
                     <% if comment.user.avatar_url %>
                         <img src="<%= comment.user.avatar_url%>">
                     <% else %>
