--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="comment-form">
-<div class="comment-author-icon">
+<div class="author-icon">
 <% if current_user.avatar_url %>
     <img src="<%= current_user.avatar_url%>" >
 <% else %>
