--- a/app/views/public/_header.html.erb
+++ b/app/views/public/_header.html.erb
@@ -1,20 +1,24 @@
 <header class="main-header">
-  <%= link_to "Snippit", root_path, class: "brand-title"%>
-  <nav>
-    <ul style="display: flex; gap: 1rem; list-style: none">
-      <li><%= link_to "All Snippets", code_snippets_path, class: "link" %></li>
-      <li><%= link_to "New snippet", new_code_snippet_path , class: "link"%></li>
-      <li><%= link_to "Contributors", contributors_path, class: 'link' %></li>
+  <%= link_to "Snippit", root_path, class: "brand"%>
+  <nav class="nav">
+    <ul class="nav__ul">
+      <li><%= link_to "Snippets", code_snippets_path, class: "nav__link" %></li>
+      <li><%= link_to "Contributors", contributors_path, class: 'nav__link' %></li>
+      <li><%= link_to "Contact", root_path , class: "nav__link"%></li>
+      <li><%= link_to "About", root_path , class: "nav__link"%></li>
     </ul>
-   <% if current_user %>
-      <%= form_with url: destroy_user_session_path, method: :delete do |f| %>
-        <%= f.submit "Log Out", class: "btn btn-outline"%>
-      <% end %>
-    <% else %>
-      <%= link_to "Log in", new_user_session_path, class: "btn btn-outline" %>
-      <%= link_to "Register", new_user_registration_path, class: "btn btn-outline" %>
-    <% end %>
   </nav>
+   <% if current_user %>
+    <div class="btn-group">
+      <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: 'btn nav-btn' %>
+      <%= link_to "Upload Snippet", new_code_snippet_path , class: "btn nav-btn btn-outline" %>
+    </div>
+    <% else %>
+    <div class="btn-group">
+      <%= link_to "Log in", new_user_session_path, class: "btn nav-btn" %>
+      <%= link_to "Register", new_user_registration_path, class: "btn nav-btn btn-outline" %>
+    </div>
+    <% end %>
 </header>
 
 <%= render 'public/alert' %>
