--- a/app/views/public/homepage.html.erb
+++ b/app/views/public/homepage.html.erb
@@ -1,8 +1,62 @@
 <%= render 'header' %>
-
 <section class="hero-section">
-    <h2>Write better code with Code Snippets</h2>
+  <div class="hero__content">
+    <h2 class="hero__title">Write better code with Code Snippets</h2>
     <p>Find and share code snippets to help you solve problems and save time. Join our community of developers today.</p>
-    <%= link_to "Browse Snippets", code_snippets_path, class: "btn btn-primary" %>
+    <%= link_to "Browse Snippets", code_snippets_path, class: "btn nav-btn btn-outline" %>
+  </div>
+  <div>
+    <%= image_tag 'programming.jpg', class: "hero__image" %>
+  </div>
 </section>
-
+<section class="feature-section">
+  <h2 class="feature__title">Popular Snippets</h2>
+  <div class="feature-grid">
+    <% @snippets.each do |snippet| %>
+      <%= render 'code_snippets/card', snippet: snippet %>
+    <% end %>
+  </div>
+</section>
+<section class="feature-section">
+  <h2 class="feature__title">Top Contributors</h2>
+  <div class="feature-grid">
+    <% @contributors.each do |user| %>
+      <%= link_to contributor_path(user) do %>
+        <div class="user-card">
+          <img src="<%= user.avatar_url%>" class="user-image">
+          <h3><%= user.name%></h3>
+          <p class="user-bio"><%= user.bio%></p>
+          <div class="user-value-container">
+            <div class="user-values">
+              <p class="value">
+                15
+              </p>
+              <p class="value-name">
+                Followers
+              </p>
+            </div>
+            <div class="user-values">
+              <p class="value">
+                9
+              </p>
+              <p class="value-name">
+                Snippets
+              </p>
+            </div>
+            <div class="user-values">
+              <p class="value">
+                4
+              </p>
+              <p class="value-name">
+                Comments
+              </p>
+            </div>
+          </div>
+          <button class="view-profile">
+            View Profile
+          </button>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+</section>
