--- a/app/views/public/homepage.html.erb
+++ b/app/views/public/homepage.html.erb
@@ -37,7 +37,7 @@
             </div>
             <div class="user-values">
               <p class="value">
-                9
+                <%= user.code_snippets_counter || 0 %>
               </p>
               <p class="value-name">
                 Snippets
@@ -60,3 +60,25 @@
     <% end %>
   </div>
 </section>
+<footer class="footer">
+  <div>
+    <h2>Snippit</h2>
+    <div class="social-bar">
+      <i class="fa-brands fa-square-facebook"></i>
+      <i class="fa-brands fa-square-twitter"></i>
+      <i class="fa-brands fa-linkedin"></i>
+    </div>
+  </div>
+  <nav class="footer-nav">
+    <ul class="footer-nav__ul">
+      <li>Home</li>
+      <li>Snippets</li>
+      <li>Contributors</li>
+      <li>About</li>
+    </ul>
+  </nav>
+  <div>
+    <div></div>
+    <p>Copyright 2023. All Rights Reserved</p>
+  </div>
+</footer>
