--- a/app/assets/stylesheets/snippet.css
+++ b/app/assets/stylesheets/snippet.css
@@ -9,13 +9,13 @@
 }
 
 .snippet-item {
+  position: relative;
   background-color: #fff;
   padding: 1rem;
   border-radius: 4px;
   max-height: 300px;
   display: grid;
   gap: 0.5rem;
-  cursor: pointer;
   transition: all 0.2s ease-in;
 }
 
@@ -29,15 +29,37 @@
   gap: 0.5rem;
 }
 
+.snippet-item__show-btn {
+  position: absolute;
+  top: 1rem;
+  right: 3rem;
+  display: block;
+  background-color: cornflowerblue;
+  padding: 0.25rem 0.5rem;
+  border-radius: 5px;
+  color: #f0f0f0;
+  opacity: 0;
+  margin-left: auto;
+  transition: all 0.2s ease-in;
+}
+
+.snippet-item__show-btn:hover {
+  box-shadow: 3px 6px 10px rgba(140, 98, 143, 0.29);
+}
+
+.snippet-item:hover .snippet-item__show-btn {
+  opacity: 1;
+}
+
 .snippet-item__menu-btn {
   background: none;
   border: none;
   width: 30px;
   height: 30px;
   padding: 1px;
+  margin-left: auto;
   border-radius: 6px;
   font-size: 1.6rem;
-  margin-left: auto;
   transition: all 0.2s ease;
 }
 
@@ -51,15 +73,6 @@
   gap: 1rem;
   color: #000;
   font-weight: 500;
-}
-
-.link-arrow {
-  color: #6200ee;
-  display: none;
-}
-
-.snippet-item:hover .link-arrow {
-  display: block;
 }
 
 .snippet-item pre {
@@ -188,25 +201,19 @@
   text-decoration: none;
   text-transform: uppercase;
   transition: all 0.3s ease-in;
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0 3px 1px -2px,
-    rgba(0, 0, 0, 0.14) 0 2px 2px 0,
+  box-shadow: rgba(0, 0, 0, 0.2) 0 3px 1px -2px, rgba(0, 0, 0, 0.14) 0 2px 2px 0,
     rgba(0, 0, 0, 0.12) 0 1px 5px 0;
 }
 
 .snippet-form input[type='submit']:hover,
 .snippet-form input[type='submit']:focus {
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0 2px 4px -1px,
-    rgba(0, 0, 0, 0.14) 0 4px 5px 0,
+  box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px -1px, rgba(0, 0, 0, 0.14) 0 4px 5px 0,
     rgba(0, 0, 0, 0.12) 0 1px 10px 0;
   transform: translateY(-2px);
 }
 
 .snippet-form input[type='submit']:active {
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0 5px 5px -3px,
-    rgba(0, 0, 0, 0.14) 0 8px 10px 1px,
-    rgba(0, 0, 0, 0.12) 0 3px 14px 2px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 5px 5px -3px,
+    rgba(0, 0, 0, 0.14) 0 8px 10px 1px, rgba(0, 0, 0, 0.12) 0 3px 14px 2px;
   background: #a46bf5;
 }
