--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,3 +1,15 @@
+:root {
+  --primary-color: cornflowerblue;
+  --secondary-color: blueviolet;
+
+  --gray: #697785;
+  --grayLight: #e4e7f0;
+  --grayDark: #050c26;
+
+  --fontSmall: 0.9rem;
+  --fontNormal: 1.1rem;
+}
+
 * {
   margin: 0;
   padding: 0;
