--- a/app/assets/stylesheets/comment.css
+++ b/app/assets/stylesheets/comment.css
@@ -2,7 +2,7 @@
   width: 100%;
   margin: 1rem 0;
   background-color: #fff;
-  border: solid 1px var(--grayLight);
+  border: var(--border-light);
   border-radius: 8px;
   padding: 1rem;
   display: flex;
@@ -29,11 +29,11 @@
 
 .comment-form textarea:focus {
   outline: none;
-  box-shadow: inset 0 2px 5px var(--grayLight);
+  box-shadow: var(--shadow-inset);
 }
 
 .comment-form input[type='submit'] {
-  background-color: var(--primary-color);
+  background-color: var(--accent-color-1);
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -63,7 +63,7 @@
   gap: 2rem;
   padding: 0.25rem;
   background-color: #fff;
-  border: solid 1px var(--grayLight);
+  border: var(--border-light);
   border-radius: 12px;
 }
 
