--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,16 +1,40 @@
 :root {
-  --primary-color: cornflowerblue;
-  --secondary-color: blueviolet;
+  --accent-color-1: #007bff;
+  --accent-color-2: #51a351;
 
+  --lightGray: #e4e7f0;
+  --dark: #050c26;
   --gray: #697785;
-  --grayLight: #e4e7f0;
-  --grayDark: #050c26;
+
+  /* Icon Colors */
+  --vibrant-blue: #42a5f5;
+  --fresh-green: #7ed321;
+  --golden-yellow: #ffcc00;
+  --bold-pink: #ff4081;
+
+  --green-100: #80d8a1;
+  --green-200: #43a047;
+  --green-300: #2e7d32;
+
+  --orange-100: #ffe082;
+  --orange-200: #ffb74d;
+  --orange-300: #f57c00;
+
+  --red-100: #ef9a9a;
+  --red-200: #e57373;
+  --red-300: #d32f2f;
 
   --fontSmall: 0.9rem;
   --fontNormal: 1.1rem;
+
+  --shadow-hover: 3px 6px 10px -5px #aaa5;
+  --shadow-inset: inset 0 2px 5px var(--lightGray);
+  --border-light: solid 1px var(--lightGray);
 }
 
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -18,8 +42,8 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 18px;
-  background-color: rgb(241, 243, 250);
+  font-size: var(--fontNormal);
+  background-color: #fff;
 }
 
 a {
@@ -95,7 +119,7 @@ button {
   background-color: #333;
   color: #fff;
   transform: translateY(-2px);
-  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  box-shadow: var(--shadow-hover);
 }
 
 /* Alert messages  */
@@ -109,27 +133,27 @@ button {
 }
 
 .alert-success {
-  background-color: #a5d6a7;
-  border-color: #66bb6a;
-  color: #1b5e20;
+  background-color: var(--green-100);
+  border-color: var(--green-200);
+  color: var(--green-300);
 }
 
 .alert-info {
-  background-color: #ffe082;
-  border-color: #ffb74d;
-  color: #e65100;
+  background-color: var(--orange-100);
+  border-color: var(--orange-200);
+  color: var(--orange-300);
 }
 
 .alert-danger {
-  background-color: #ef9a9a;
-  border-color: #e57373;
-  color: #b71c1c;
+  background-color: var(--red-100);
+  border-color: var(--red-200);
+  color: var(--red-300);
 }
 
 /* Links */
 
 .link {
-  color: blueviolet;
+  color: var(--accent-color-1);
   text-decoration: none;
   position: relative;
   transition: color 0.2s ease-out;
@@ -142,14 +166,14 @@ button {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: blueviolet;
+  background-color: var(--accent-color-1);
   visibility: hidden;
   transform: scaleX(0);
   transition: all 0.2s ease-out;
 }
 
 .link:hover {
-  color: darkblue;
+  color: var(--accent-color-2);
 }
 
 .link:hover::before {
